s3tftpd (0.3.1) UNRELEASED; urgency=medium

  * Add --region option to specify AWS region
  * Add --accelerate option to enable S3 Transfer Acceleration
  * debian: Depends on ca-certificates

 -- Kasumi Hanazuki <kasumi@rollingapple.net>  Wed, 17 Jun 2020 10:20:23 +0000

s3tftpd (0.3.0) unstable; urgency=medium

  * Log transfer completion
  * Update dependencies
  * Package using dh-golang to populate Built-Using field
  * Add manpage
  * Add --single-port experimental option to instruct s3tftpd to use a single
    UDP port, which may be useful when running behind NAT.

 -- Kasumi Hanazuki <kasumi@rollingapple.net>  Tue, 16 Jun 2020 17:37:52 +0000

s3tftpd (0.2.2) unstable; urgency=medium

  * Makefile: Respect INSTALL variable
  * Update dependencies
  * systemd: s3tftpd.service after network.target

 -- Kasumi Hanazuki <kasumi@rollingapple.net>  Thu, 13 Feb 2020 08:20:05 +0000

s3tftpd (0.2.1) unstable; urgency=medium

  * debian: Include vendored dependencies in source package

 -- Kasumi Hanazuki <kasumi@rollingapple.net>  Thu, 07 Nov 2019 04:40:30 +0000

s3tftpd (0.2) unstable; urgency=medium

  * Build depends golang-any >= 1.11.

 -- Kasumi Hanazuki <kasumi@rollingapple.net>  Thu, 24 Oct 2019 04:48:22 +0000

s3tftpd (0.1) unstable; urgency=medium

  * Initial Release.

 -- Kasumi Hanazuki <kasumi@rollingapple.net>  Thu, 25 Oct 2018 20:39:12 +0000