@@ -29,8 +29,11 @@ systemd-socket-activate -d -l 69 s3tftpd s3://bucket/prefix/
 *-r*, *--retries*=_COUNT_::
   Number of retransmissions before the server disconnect the session. Default: 5
 
-*-t*, *--timeout*=_MSEC_::
+*-t*, *--timeout*=_MSECS_::
   Timeout in milliseconds before the server retransmits a packet. Default: 5000
+
+*-b*, *--blocksize*=_OCTETS_::
+  Specifies maximum permitted block size. Actual block size is negotiated with the client by `blksize` extension (RFC 2348). Limitation: Maximum block size is clamped to the interface MTU minus header size. Default: 512
 
 *--no-dualstack*::
   Disables S3 dualstack endpoint. s3tftpd, by default, uses the S3 dualstack endpoint so that it can communicate with S3 in either IPv4 or IPv6. Setting this flag forces s3tftpd to use IPv4 for the communication.
