@@ -2,6 +2,7 @@ s3tftpd (0.3.1) UNRELEASED; urgency=medium
 
   * Add --region option to specify AWS region
   * Add --accelerate option to enable S3 Transfer Acceleration
+  * Add --blocksize option to accept blocksize negotiation
   * debian: Depends on ca-certificates
 
  -- Kasumi Hanazuki <kasumi@rollingapple.net>  Wed, 17 Jun 2020 10:20:23 +0000
